--- a/.github/workflows/abtesting.yaml
+++ b/.github/workflows/abtesting.yaml
@@ -13,3 +13,12 @@ jobs:
         run: |
           pip install -r requirements.txt
           python RandomForest.py
+          
+          echo "## Model metrics" > report.md
+          cat metrics.txt >> report.md
+          
+          echo "## Data viz" >> report.md
+          cml-publish feature_importance.png --md >> report.md
+          cml-publish confusion_matrix.png --md >> report.md
+          
+          cml-send-comment report.md
