--- a/.github/workflows/abtesting.yaml
+++ b/.github/workflows/abtesting.yaml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - uses: iterative/setup-cml@v1
-      - name: Train model
+      - name: cml
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
