--- a/.github/workflows/abtesting.yaml
+++ b/.github/workflows/abtesting.yaml
@@ -2,7 +2,7 @@ name: abtest
 on: [push]
 jobs:
   run:
-    runs-on: [ubuntu-latest]
+    runs-on: [windows-latest]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
